{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 188,
  "lineage": "7e68410e-6b26-29d1-f215-72a6808b75d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv_zabbix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:058264399679:instance/i-0716df8bc1c32eddb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0716df8bc1c32eddb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "srv_zabbix_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b47b0fbba2da03d2",
            "private_dns": "ip-100-64-5-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "100.64.5.70",
            "public_dns": "ec2-54-235-46-80.compute-1.amazonaws.com",
            "public_ip": "54.235.46.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "author": "Victor Cleber",
                  "course": "Cloud Training - AWS bootcamp",
                  "group": "Group 7",
                  "managed_by": "terraform",
                  "subject": "Zabbix",
                  "workshop": "workshop_23"
                },
                "tags_all": {
                  "author": "Victor Cleber",
                  "course": "Cloud Training - AWS bootcamp",
                  "group": "Group 7",
                  "managed_by": "terraform",
                  "subject": "Zabbix",
                  "workshop": "workshop_23"
                },
                "throughput": 0,
                "volume_id": "vol-0d09ae9b9d5563fe6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cc27506a02419c80"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073318a847bad53e1",
            "tags": {
              "Name": "srv_zabbix"
            },
            "tags_all": {
              "Name": "srv_zabbix",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc27506a02419c80"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2",
            "aws_security_group.alb_security_group",
            "aws_subnet.alb_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:internet-gateway/igw-0222aac1354cdf475",
            "id": "igw-0222aac1354cdf475",
            "owner_id": "058264399679",
            "tags": {
              "Name": "workshop_23_zabbix_igw"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_igw",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:route-table/rtb-0a0b9febbfba75359",
            "id": "rtb-0a0b9febbfba75359",
            "owner_id": "058264399679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0222aac1354cdf475",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workshop_23_zabbix_alb_zabbix_route_table"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_alb_zabbix_route_table",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:route-table/rtb-0ef8972c1b73f63f2",
            "id": "rtb-0ef8972c1b73f63f2",
            "owner_id": "058264399679",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "workshop_23_zabbix_app_zabbix_route_rable"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_app_zabbix_route_rable",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:route-table/rtb-0f8e48adf60f14fd2",
            "id": "rtb-0f8e48adf60f14fd2",
            "owner_id": "058264399679",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "workshop_23_zabbix_db_zabbiz_route_table"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_db_zabbiz_route_table",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-alb-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eaf07a8d1465160",
            "route_table_id": "rtb-0a0b9febbfba75359",
            "subnet_id": "subnet-073318a847bad53e1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.alb_rt",
            "aws_subnet.alb_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-alb-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd8f8af9385829e4",
            "route_table_id": "rtb-0a0b9febbfba75359",
            "subnet_id": "subnet-006b4fb96cded6fe4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.alb_rt",
            "aws_subnet.alb_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-app-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0578a8912348b255b",
            "route_table_id": "rtb-0ef8972c1b73f63f2",
            "subnet_id": "subnet-048705b6bd63c31ff"
          },
          "dependencies": [
            "aws_route_table.app_rt",
            "aws_subnet.app_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-app-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fab564f606296a8",
            "route_table_id": "rtb-0ef8972c1b73f63f2",
            "subnet_id": "subnet-019553d8ddc011f13"
          },
          "dependencies": [
            "aws_route_table.app_rt",
            "aws_subnet.app_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-db-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a08a58e17ee9396d",
            "route_table_id": "rtb-0f8e48adf60f14fd2",
            "subnet_id": "subnet-00b139cc343a275e1"
          },
          "dependencies": [
            "aws_route_table.db_rt",
            "aws_subnet.db_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-db-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0851bd0515d43b8",
            "route_table_id": "rtb-0f8e48adf60f14fd2",
            "subnet_id": "subnet-0b757f5886a5be4bb"
          },
          "dependencies": [
            "aws_route_table.db_rt",
            "aws_subnet.db_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:security-group/sg-0cc27506a02419c80",
            "description": "Allows inbound access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc27506a02419c80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alb_zabbix_security_group",
            "name_prefix": "",
            "owner_id": "058264399679",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:security-group/sg-081727d84772e4506",
            "description": "Allow HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081727d84772e4506",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "From ALB - HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "From ALB - HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "app_zabbix_security_group",
            "name_prefix": "",
            "owner_id": "058264399679",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_zabbix_security_group"
            },
            "tags_all": {
              "Name": "app_zabbix_security_group",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:security-group/sg-019eeacf4eae75408",
            "description": "Allow mariaDb access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019eeacf4eae75408",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From APP - MariaDb ingress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081727d84772e4506",
                  "sg-0cc27506a02419c80"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database_zabbix_security-group",
            "name_prefix": "",
            "owner_id": "058264399679",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_zabbix_security_group"
            },
            "tags_all": {
              "Name": "database_zabbix_security_group",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.app_security_group",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:subnet/subnet-073318a847bad53e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "100.64.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073318a847bad53e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264399679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop_23_zabbix_alb_zabbix_subnet_a"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_alb_zabbix_subnet_a",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:subnet/subnet-006b4fb96cded6fe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "100.64.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006b4fb96cded6fe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264399679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop_23_zabbix_alb_zabbix_subnet_b"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_alb_zabbix_subnet_b",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:subnet/subnet-048705b6bd63c31ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "100.64.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048705b6bd63c31ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264399679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop_23_zabbix_app_zabbix_subnet_a"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_app_zabbix_subnet_a",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:subnet/subnet-019553d8ddc011f13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "100.64.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019553d8ddc011f13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264399679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop_23_zabbix_app_zabbix_subnet_b"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_app_zabbix_subnet_b",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:subnet/subnet-00b139cc343a275e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "100.64.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b139cc343a275e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264399679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop_23_zabbix_db_zabbix_subnet_a"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_db_zabbix_subnet_a",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:subnet/subnet-0b757f5886a5be4bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "100.64.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b757f5886a5be4bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264399679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop_23_zabbix_db_zabbix_subnet_b"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix_db_zabbix_subnet_b",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            },
            "vpc_id": "vpc-05ad11c4b20fd28a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264399679:vpc/vpc-05ad11c4b20fd28a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.64.0.0/16",
            "default_network_acl_id": "acl-0f89db9246db959ea",
            "default_route_table_id": "rtb-06881b53a392fa143",
            "default_security_group_id": "sg-085211ebd6637dc81",
            "dhcp_options_id": "dopt-0a58ed9d31ed19a45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ad11c4b20fd28a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06881b53a392fa143",
            "owner_id": "058264399679",
            "tags": {
              "Name": "workshop_23_zabbix"
            },
            "tags_all": {
              "Name": "workshop_23_zabbix",
              "author": "Victor Cleber",
              "course": "Cloud Training - AWS bootcamp",
              "group": "Group 7",
              "managed_by": "terraform",
              "subject": "Zabbix",
              "workshop": "workshop_23"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}